# ugrp

./: .gitignore  README.md  TRAINING.md  claude.md  main.py  pyproject.toml
docs/: TRAINING.md  UGRP_Spec_v0.1.md  profile_schema.md
scripts/: eda.py
src/ugrp/eval/: __init__.py  evaluator.py
src/ugrp/profile/: profile_builder.py
src/ugrp/recsys/: data_loader.py  model.py  movie_links.py
ui/: Home.py  README.md  profile_viewer.py
ui/pages/: 1_Profile_Viewer.py  2_My_Profile.py  3_Model_Performance.py
