[project]
name = "ugrp"
version = "0.1.0"
description = "User-Governed Recommender Playground"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "implicit>=0.7.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
